# AgentMesh

./: .gitignore  main.py  pyproject.toml
src/agentmesh/: __init__.py  config.py
