[project]
name = "agentmesh"
version = "0.1.0"
description = "Production-ready AI agent orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "langsmith>=0.7.35",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
